Feature/UIUX-Enhancement (#27)
* fix: error handling

* fix: page title

* fix: header

* fix: data table

* feat: responsive pages

* fix: navbar

* fix: partnercard

--- a/front-end/src/components/Header/Header.css
+++ b/front-end/src/components/Header/Header.css
@@ -69,3 +69,19 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+@media (max-width: 480px) {
+  .header {
+    height: 50px;
+  }
+
+  .header-breadcrumbs li,
+  .header-breadcrumbs p {
+    font-size: 8px;
+  }
+
+  .header-title {
+    font-weight: 700;
+    font-size: 14px;
+  }
+}
