--- a/front-end/src/pages/AccountsManagementPage/AccountsOverviewPage/AccountsOverviewPage.css
+++ b/front-end/src/pages/AccountsManagementPage/AccountsOverviewPage/AccountsOverviewPage.css
@@ -47,6 +47,61 @@
     display: flex;
 }
 
-.accounts-container .MuiPaper-root{
-    box-sizing: border-box;
+.accounts-container {
+    .MuiPaper-root{
+        box-sizing: border-box;
+    }
+}
+
+@media (max-width: 480px) {
+    .accounts-overview-page {
+        max-width: 100%;
+    }
+
+    .accounts-container {
+        width: 100%;
+        max-width: 85%;
+    }
+
+    .accounts-toolbars {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .accounts-toolbars .action-container {
+        width: 100%;
+        gap: 10px;
+        justify-content: space-between;
+    }
+
+    .accounts-toolbars button, .search-container button {
+        font-size: 10px;
+        height: 30px;
+        min-width: 80px;
+    }
+
+    .accounts-toolbars .search-container {
+        width: 100%;
+        justify-content: center;
+    }
+}
+
+@media (min-width: 480px) and (max-width: 768px)  {
+    .accounts-overview-page {
+        max-width: 100%;
+    }
+
+    .accounts-container {
+        width: 100%;
+        max-width: 90%;
+    }
+
+    .accounts-toolbars {
+        flex-direction: row;
+    }
+
+    .accounts-toolbars button {
+        font-size: 10px;
+    }
 }
