--- a/front-end/src/pages/ActivitiesManagementPage/ActivitiesFormPage/ActivitiesFormPage.css
+++ b/front-end/src/pages/ActivitiesManagementPage/ActivitiesFormPage/ActivitiesFormPage.css
@@ -45,17 +45,17 @@
     gap: 1vw;
 }
 
-.date-controller {
+.activities-form-page .date-controller {
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
-.date-controller .date-item {
+.activities-form-page .date-controller .date-item {
     width: 45%;
 }
 
-.rich-text-editor {
+.activities-form-page .rich-text-editor {
     width: 100%;
 }
 
@@ -66,7 +66,7 @@
     gap: 2vw;
 }
 
-.form-button {
+.activities-form-page .form-button {
     align-self: flex-end;
     display: flex;
     gap: 2vw;
@@ -89,4 +89,35 @@
 
 .activities-form-page .form-container::-webkit-scrollbar-thumb:hover {
     background: #2886ca;
+}
+
+@media (max-width: 480px) {
+    .activities-form-page .form {
+        width: 90%;
+    }
+
+    .activities-form-page .form .image-upload-container {
+        width: 100%;
+    }
+
+    .activities-form-page .form .form-top {
+        flex-direction: column;
+    }
+
+    .activities-form-page .form .form-top .form-left,
+    .activities-form-page .form .form-top .form-right {
+        width: 100%;
+        gap: 15px;
+    }
+
+    .activities-form-page .sun-editor {
+        width: 100% !important;
+        min-width: auto !important;
+    }
+
+    .activities-form-page .date-controller {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
 }
