--- a/front-end/src/pages/BannersManagementPage/BannersFormPage/BannersFormPage.css
+++ b/front-end/src/pages/BannersManagementPage/BannersFormPage/BannersFormPage.css
@@ -29,38 +29,28 @@
     margin-bottom: 2vw;
 }
 
-.banner-form-page .form .form-top {
-    .form-left {
-        width: 40%;
-        height: auto;
-        display: flex;
-        justify-content: center;
-        align-content: center;
-    }
-
-    .form-right {
-        width: 50%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-content: center;
-        gap: 1vw;
-    }
-
+.banner-form-page .form .form-top .form-left {
+    width: 40%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-content: center;
 }
 
-.date-controller {
+.banner-form-page .form .form-top .form-right {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    gap: 1vw;
+}
+
+.banner-form-page .form .form-top .form-left .image-upload-container {
     width: 100%;
     display: flex;
-    justify-content: space-between;
-}
-
-.date-controller .date-item {
-    width: 45%;
-}
-
-.rich-text-editor {
-    width: 100%;
+    flex-direction: column;
+    align-items: center;
 }
 
 .banner-form-page .form .form-bottom {
@@ -70,7 +60,7 @@
     gap: 2vw;
 }
 
-.form-button {
+.banner-form-page .form-button {
     align-self: flex-end;
     display: flex;
     gap: 2vw;
