--- a/front-end/src/components/Navbar/Navbar.css
+++ b/front-end/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .navbar-section {
-   width: 16vw;
+   width: 190px;
    max-height: 100vh;
    background: #fff;
    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
@@ -17,7 +17,7 @@
 
 .navbar-logo {
    width: 80%;
-   margin-top: 0.7vw;
+   margin-top: 10px;
 }
 
 .navbar-items,
@@ -31,11 +31,11 @@
 
 .navbar-item {
    width: 100%;
-   padding-left: 1vw;
-   min-height: 3.3vw;
+   padding-left: 15px;
+   min-height: 35px;
    display: flex;
    align-items: center;
-   font-size: 0.9vw;
+   font-size: 10px;
    cursor: pointer;
    transition: background 0.2s ease;
    position: relative;
@@ -44,15 +44,15 @@
 
 .navbar-item-icon,
 .dropdown-icon {
-   font-size: 1.2vw;
-   margin-right: 0.5vw;
+   font-size: 12px;
+   margin-right: 8px;
    color: #000c;
 }
 
 .dropdown-icon {
-   font-size: 0.8vw;
+   font-size: 8px;
    position: absolute;
-   right: 10%;
+   right: 5%;
    transition: transform 0.2s ease-in-out;
 }
 
@@ -79,13 +79,13 @@
 }
 
 .navbar-item.user {
-   margin-top: 0.5vw;
-   border-top: 0.1vw solid #D9D9D9;
-   border-bottom: 0.1vw solid #D9D9D9;
+   margin-top: 10px;
+   border-top: 1px solid #D9D9D9;
+   border-bottom: 1px solid #D9D9D9;
 }
 
 #navbar-logout {
-   border-top: 0.1vw solid #E0E0E9;
+   border-top: 1px solid #E0E0E9;
    background: #FDFDFD;
 }
 
@@ -94,10 +94,10 @@
 }
 
 .navbar-item .user-avatar {
-   width: 2.5vw;
-   height: 2.5vw;
+   width: 30px;
+   height: 30px;
    border-radius: 50%;
-   margin-right: 1vw;
+   margin-right: 10px;
    object-fit: cover;
 }
 
@@ -107,13 +107,13 @@
 
 .user-name {
    color: #000;
-   font-size: 1vw;
+   font-size: 10px;
    font-weight: 500;
 }
 
 .user-id {
    color: #178DE2;
-   font-size: 0.8vw;
+   font-size: 8px;
 }
 
 /* Dropdown */
@@ -127,16 +127,16 @@
 }
 
 .dropdown-container.show {
-   max-height: 30vw;
+   max-height: 200px;
    opacity: 1;
 }
 
 .dropdown-item {
-   height: 3.3vw;
-   padding-left: 2vw;
+   height: 35px;
+   padding-left: 20px;
    display: flex;
    align-items: center;
-   font-size: 0.9vw;
+   font-size: 9px;
    color: #000;
 }
 
