chore: adjust datatable css in management page

--- a/front-end/src/components/DataTable/DataTable.css
+++ b/front-end/src/components/DataTable/DataTable.css
@@ -3,6 +3,7 @@
 .data-paper-container div,
 .data-paper-container p {
    font-family: "BeVietnamPro";
+   font-size: 12px;
 }
 
 .data-table-container::-webkit-scrollbar {
