--- a/front-end/src/components/Header/Header.css
+++ b/front-end/src/components/Header/Header.css
@@ -3,44 +3,22 @@
   display: flex;
   font-family: 'BeVietnamPro';
   align-items: center;
-  padding: 1vw 3vw;
-  gap: 1em;
-  box-shadow: 0 0 1vw #292d327c;
+  height: 50px;
+  padding: 0 1.5em;
+  box-shadow: 0 0 4px #292d327c;
   z-index: 8;
   box-sizing: border-box;
-}
-
-.header-icon {
-  padding: 0.4vw 0.7vw;
-  font-size: 1vw;
-  min-height: 10px;
-  color: #25272abf;
-  box-shadow: 0vw 0vw 0.5vw #292d327c;
-  border-radius: 0.5vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  transition: background-color 0.2s ease-in-out;
-}
-
-.header-icon:hover {
-  background-color: #292d3218;
 }
 
 .header-content {
   display: flex;
   flex-direction: column;
-  gap: 0.2vw;
-}
-
-.header-breadcrumbs {
-  font-size: 1vw;
+  gap: 2px;
 }
 
 .header-breadcrumbs li,
 .header-breadcrumbs p {
-  font-size: 1vw;
+  font-size: 8px;
 }
 
 .header-breadcrumbs a {
@@ -54,7 +32,7 @@
 }
 
 .header-breadcrumbs p {
-  font-weight: 600;
+  font-weight: 500;
   text-decoration: underline;
   color: inherit;
   font-family: 'BeVietnamPro';
@@ -62,7 +40,7 @@
 
 
 .header-title {
-  font-size: 1.8vw;
+  font-size: 16px;
   font-weight: 700;
   background: linear-gradient(180deg, #0083B0 0%, #00B4DB 100%);
   background-clip: text;
@@ -83,5 +61,28 @@
   .header-title {
     font-weight: 700;
     font-size: 14px;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 768px) {
+  .header {
+    height: 50px;
+  }
+
+  .header-breadcrumbs li,
+  .header-breadcrumbs p {
+    font-size: 8px;
+  }
+
+  .header-title {
+    font-weight: 700;
+    font-size: 14px;
+  }
+}
+
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .header {
+    height: 50px;
   }
 }
