--- a/front-end/src/components/FAQsCard/FAQsCard.css
+++ b/front-end/src/components/FAQsCard/FAQsCard.css
@@ -4,11 +4,13 @@
     display: flex;
     flex-direction: column;
     align-self: center;
-    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.12), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 3px 1px -2px rgba(0, 0, 0, 0.20);
-    padding: 1vw;
+    justify-content: center;
+    box-shadow: 1px 2px 7px 0px rgba(0, 0, 0, 0.2);
+    padding: 10px 20px;
     border-radius: 0.5vw;
     box-sizing: border-box;
     line-height: 1.5;
+    min-height: 80px;
 }
 
 .faq-top {
@@ -18,11 +20,11 @@
 }
 
 .faq-top span {
-    font-size: 1.2vw;
+    font-size: 16px;
 }
 
 .faq-answer {
-    font-size: 1vw;
+    font-size: 10px;
     color: rgba(0, 0, 0, 0.60);
 }
 
