--- a/front-end/src/pages/AccountsManagementPage/AccountsOverviewPage/AccountsOverviewPage.css
+++ b/front-end/src/pages/AccountsManagementPage/AccountsOverviewPage/AccountsOverviewPage.css
@@ -75,7 +75,8 @@
     .accounts-toolbars .action-container {
         width: 100%;
         gap: 10px;
-        justify-content: space-between;
+        display: flex;
+        flex-direction: column;
     }
 
     .accounts-toolbars button,
@@ -102,10 +103,35 @@
     }
 
     .accounts-toolbars {
-        flex-direction: row;
+        flex-direction: column;
     }
 
     .accounts-toolbars button {
         font-size: 10px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .accounts-overview-page {
+        max-width: 100%;
+    }
+
+    .accounts-toolbars {
+        flex-direction: column;
+        align-items: flex-end;
+        gap: 20px;
+    }
+
+    .accounts-toolbars .action-container {
+        width: 100%;
+    }
+
+    .accounts-toolbars .search-container {
+        width: 100%;
+        justify-content: flex-end;
+    }
+
+    .accounts-container .action-container .action-container-item {
+        gap: 20px;
     }
 }
