chore: adjust css

--- a/front-end/src/components/FAQsCardList/FAQsCardList.css
+++ b/front-end/src/components/FAQsCardList/FAQsCardList.css
@@ -29,7 +29,7 @@
 }
 
 .faq-card-list .tabs-container .progress-bar {
-  width: 10vw;
+  width: 210px;
   height: 0.1vw;
   background-color: #1976D2;
   position: absolute;
