--- a/front-end/src/layouts/MainLayout/MainLayout.css
+++ b/front-end/src/layouts/MainLayout/MainLayout.css
@@ -31,3 +31,9 @@
   background-color: var(--scrollbar-color);
   border-radius: 4px;
 }
+
+@media (min-width: 800px) and (max-width: 900px) {
+  .main-layout main{
+    padding-left: 45px;
+  }
+}
