--- a/front-end/src/pages/PersonnelManagementPage/PersonnelOverviewPage/PersonnelOverviewPage.css
+++ b/front-end/src/pages/PersonnelManagementPage/PersonnelOverviewPage/PersonnelOverviewPage.css
@@ -7,7 +7,7 @@
 
 .personnel-container {
     margin-top: 3vw;
-    max-width: 95%;
+    width: 95%;
     display: flex;
     flex-direction: column;
     justify-content: center;
