--- a/front-end/src/pages/AccountsManagementPage/AccountsFormPage/AccountsFormPage.css
+++ b/front-end/src/pages/AccountsManagementPage/AccountsFormPage/AccountsFormPage.css
@@ -58,8 +58,8 @@
 .account-form-page .form-control .select-button{
     position: absolute;
     right: 1%;
-    top: 50%; 
-    transform: translateY(-50%); 
+    top: 0;
+    margin-top: 5px;
 }
 
 .account-form-page .form-button {
