--- a/front-end/src/components/ConfirmedDialog/ConfirmedDialog.css
+++ b/front-end/src/components/ConfirmedDialog/ConfirmedDialog.css
@@ -53,39 +53,45 @@
     position: relative;
 }
 
-.circle.warning {
-    background-color: rgba(240, 173, 78, 0.2);
+.circle .icon {
+    position: relative;
+    font-size: 40px;
 }
 
+/* Default */
+.circle.default {
+  background: #f1f1f1;
+  color: #555;
+}
+
+/* Success */
+.circle.success {
+  background: #d4f8d4;
+  color: #2d8a34;
+}
+
+/* Info */
 .circle.info {
-    background-color: rgba(0, 149, 191, 0.2);
+  background: #d6ecff;
+  color: #1778c9;
 }
 
-.circle.delete {
-    background-color: rgba(229, 62, 62, 0.1);
+/* Danger */
+.circle.danger {
+  background: #ffe2e2;
+  color: #d93025;
 }
 
-.circle:before {
-    content: '';
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+/* Warning */
+.circle.warning {
+  background: #fff3cd;
+  color: #b58900;
 }
 
-.circle.warning:before {
-    background-color: #f0ad4e;
-}
-
-.circle.info:before {
-    background-color: #0095bf;
-}
-
-.circle.delete:before {
-    background-color: #e53e3e;
+/* Dark */
+.circle.dark {
+  background: #333;
+  color: #fff;
 }
 
 .mark {
@@ -147,32 +153,59 @@
     width: 45%;
 }
 
-.confirm-button.warning {
-    background-color: #f0ad4e;
+
+/* Default */
+.confirm-button.default {
+  background-color: #f1f1f1;
+  color: #555;
+}
+.confirm-button.default:hover {
+  background-color: #e0e0e0;
 }
 
+/* Success */
+.confirm-button.success {
+  background-color: #2d8a34;
+  color: white;
+}
+.confirm-button.success:hover {
+  background-color: #247028;
+}
+
+/* Info */
 .confirm-button.info {
-    background-color: #0095bf;
+  background-color: #1778c9;
+  color: white;
 }
-
-.confirm-button.delete {
-    background-color: #ff3b30;
-}
-
-.cancel-button:hover {
-    background-color: #e5e5e5;
-}
-
-.confirm-button.warning:hover {
-    background-color: #ec971f;
-}
-
 .confirm-button.info:hover {
-    background-color: #007a9f;
+  background-color: #1360a3;
 }
 
-.confirm-button.delete:hover {
-    background-color: #e02d23;
+/* Danger */
+.confirm-button.danger {
+  background-color: #d93025;
+  color: white;
+}
+.confirm-button.danger:hover {
+  background-color: #b3241b;
+}
+
+/* Warning */
+.confirm-button.warning {
+  background-color: #b58900;
+  color: white;
+}
+.confirm-button.warning:hover {
+  background-color: #936f00;
+}
+
+/* Dark */
+.confirm-button.dark {
+  background-color: #333;
+  color: white;
+}
+.confirm-button.dark:hover {
+  background-color: #222;
 }
 
 @media (max-width: 480px) {
