--- a/front-end/src/pages/CollaboratorsSeekingPage/CollaboratorsManagementPage/CollaboratorsManagementPage.css
+++ b/front-end/src/pages/CollaboratorsSeekingPage/CollaboratorsManagementPage/CollaboratorsManagementPage.css
@@ -52,6 +52,20 @@
     max-height: 450px !important;
 }
 
+.record-modal-overlay {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
 @media (max-width: 480px) {
     .collaborators-overview-page {
         max-width: 100%;
