--- a/front-end/src/pages/PartnersSelectionPage/PartnersSelectionPage.css
+++ b/front-end/src/pages/PartnersSelectionPage/PartnersSelectionPage.css
@@ -15,8 +15,8 @@
     flex-grow: 1;
     overflow-y: auto;
     display: flex;
-    justify-content: center;
-    padding: 2rem 0;
+    flex-direction: column;
+    align-items: center;
 }
 
 .partner-list-section::-webkit-scrollbar {
