--- a/front-end/src/pages/PersonnelManagementPage/PersonnelFormPage/PersonnelFormPage.css
+++ b/front-end/src/pages/PersonnelManagementPage/PersonnelFormPage/PersonnelFormPage.css
@@ -1,7 +1,7 @@
 .personnel-form-page {
     width: 100%;
     overflow-x: hidden;
-    max-height: 100vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
 }
